feat: add identities list to authz service and admin panel
